# home-flora-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.bot  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: plants.json
config/mosquitto/: mosquitto.conf
flora/: __init__.py  charting.py  media.py  mqtt_ingest.py  openplantbook.py  plants.py  settings.py  status.py  storage.py  telegram_bot.py  time.py
scripts/: miflora_ble_probe.py  plant_bot.py
