[project]
name = "flora"
version = "0.1.0"
description = "Self-hosted Mi Flora plant monitoring with MQTT, OpenPlantbook, and Telegram."
requires-python = ">=3.11"
dependencies = [
  "bleak>=0.22,<2",
  "matplotlib>=3.9,<4",
  "paho-mqtt>=2,<3",
  "python-telegram-bot>=21,<23",
  "requests>=2,<3",
]

[dependency-groups]
dev = [
  "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]
ignore = [
  "E501",
]
